# offroadify

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json
.ai/tasks/: 000-task-template.md  001-upload-and-preview.md  002-image-editing-api-route.md  003-connect-generation-ui.md  004-download-generated-image.md  005-download-and-mvp-polish.md  006-scaffold-qwen-inference-service.md  007-qwen-model-smoke-test.md  008-qwen-edit-http-endpoint.md  009-add-qwen-local-provider-adapter.md  010-switch-and-verify-qwen-local.md  011-prepare-qwen-deployment.md
app/: page.tsx
app/api/offroadify/: route.ts
docs/: architecture.md  commands.md  environment.md  product.md  roadmap.md
lib/image-generation/: cloudflare.ts  dimensions.ts  prompt.ts  types.ts
services/qwen-inference/: .env.example  README.md  pyproject.toml
services/qwen-inference/src/offroadify_inference/: __init__.py  app.py  config.py
services/qwen-inference/tests/: test_health.py
