[project]
name = "offroadify-inference"
version = "0.1.0"
description = "Local Qwen image-edit inference service for Offroadify"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/offroadify_inference"]

[tool.pytest.ini_options]
testpaths = ["tests"]
